[package]
name        = "arrutil"
version     = "1.0.0"
edition     = "2018"
authors     = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
description = "Functions for manipulating arrays from slices"
license     = "Unlicense/MIT"
keywords    = ["array", "arr", "util", "utility", "macro"]
repository  = "https://github.com/LLBlumire/arrutil"

[dependencies]
